background issues on mobile caused by footer fixed

--- a/assets/scss/main.css
+++ b/assets/scss/main.css
@@ -567,7 +567,13 @@ and ajusted to project needs*/
   .github-icon,
   .developer-info,
   .picflip-footer {
-    padding: 0.4rem; } }
+    padding: 0.4rem; }
+
+  /* fixes background image display issue on 5se mobiles */
+  .dashboard,
+  .game-board {
+    height: auto;
+    padding-bottom: 2rem; } }
 @media screen and (max-width: 576px) {
   /*small phones*/
   button .star {
@@ -596,10 +602,6 @@ and ajusted to project needs*/
   [type=radio], .radio {
     height: 60px;
     width: 60px; }
-
-  /* fixes background image display issue on 5se mobiles */
-  .game-board {
-    height: auto; }
 
   #footerTabContainer.active-footer {
     margin-top: -145px; }
